Create an app with a layout that holds a counter TextView, a Button to increment the counter, and an EditText. See the screenshot below as an example. You don't have to precisely duplicate the layout. Add a click handler for the Button that increments the counter. Run the app and increment the counter. Enter some text into the EditText. Implement onSaveInstanceState() to save the current state of the app. Update onCreate() to restore the state of the app. Make sure that when you rotate the device, the app state is preserved.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Activity lifecycle and state</string>
+
+    <string name="textview_hint">Smth</string>
+    <string name="btn_count_text">count</string>
+    <string name="edittext_hint">Type smth here.</string>
 </resources>
